--- a/src/App.css
+++ b/src/App.css
@@ -11,21 +11,15 @@
 .App {
 	min-height: calc(var(--vh, 1vh) * 100);
 	display: flex;
-	align-items: center;
-	background-color: #202023;
+	align-items: stretch;
 	font-family: 'Roboto', sans-serif;
 }
 
-.result {
-	
-}
-
-.orange {
-	background-color: #FF9500;
-	color: #fff;
-}
-
-.gray {
-	background-color: #505050;
-	color: #fff;
+.wrapper {
+	margin: auto;
+	display: flex;
+	align-items: center;
+	max-width: 343px;
+	width: 100%;
+	height: 100%;
 }
